Unitcon.py Change log


Alpha v1.0.0.0: 8/5
#Started making the program

Alpha v1.0.2.0: 8/7
#Changed layout of the program
#Did experimentation with a switch button, failed

Alpha v1.0.3.0: 8/8
#Added a temporary icon image
#Did some work around the code so all menus are in one class
#Added a redraw command and clear screen command

Alpha v1.0.3.1: 8/8
#Decided to switch between buttons and instead use check buttons
#Changed the module api a little

Alpha v1.0.3.2: 8/10
#Pushed to github public repo
#Started working on this at 4:30 in the morning
#Fixed a problem in where the program icon would not load in linux
#Looked into testing OSx icon imaging. Will confirm works once valid test option
    becomes available
#Moved each image into their own folder.

Alpha v1.0.4.0: 8/13
#Had to scrub the calculate class due to ongoing complications :(

Alpha v1.1.0.1: 8/14
#Got the button command to work finally!
#Version is finally 1.1 and some change
#Discoverd bug in api
#Changed api so it rounds to three decimal places
#Temperature is now fully operational

Alpha v1.2: 2/22
#Started working on the Length conversions
#Removed the math folder since it wasn't working properly
#Put 'Conversions' back into the main directory
#Started working on the 'Length' class in the API
#Added 'Data' to the list of things to convert. I.E kilobytes, Megabytes, etc.