@@ -1,6 +1,6 @@
 Unit-Conversion-Program-in-Python
 =================================
 
-This program uses a custom made module and Tkinter to create a unit conversion program mainly for practice making GUI's and for coding in python. 
+This program uses a custom made module and Tkinter to create a unit conversion program mainly for practice making GUI's and for coding in python.
 
-As of right now, this program is in version 1.1. The only conversion that works right now are temperature conversion. So have fun. If any bugs are spotted then let me know. 
+As of right now, this program is in version 1.2.0.1. The only conversion that works right now are temperature conversion. So have fun. If any bugs are spotted then let me know. 
